# triangles

./: Cargo.toml  notes.txt  todo.txt
src/: base.rs  bmtext.rs  camcon.rs  helper.rs  lib.rs  model.rs  modelman.rs  renderer.rs  rmod.rs  teximg.rs  texman.rs  vertex.rs
src/model/: cmodel.rs  mod.rs  model_ref.rs  modelman.rs
src/shader/: frag.glsl  mod.rs
src/shader/solid/: frag.glsl  vert.glsl
src/shader/tex/: frag.glsl  vert.glsl
