[package]
name = "triangles"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-shaders = {git = "https://github.com/vulkano-rs/vulkano"}
vulkano-win = {git = "https://github.com/vulkano-rs/vulkano"}
nalgebra = "0.31"
winit = "0.27"

bytemuck = "1.12"
image = "0.24"
